--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "link": "tsc -p tsconfig.json && npm link",
-    "tsc":"tsc -p tsconfig.json"
+    "tsc": "tsc -p tsconfig.json"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@types/node": "^20.12.13",
     "concurrently": "^8.2.2",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
     "nodemon": "^3.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^8.5.0"
   },
   "dependencies": {
     "dotenv": "^16.4.5"
